<resources>
    <string name="app_name">HeartGuard Layout</string>
    <string name="ap_name">RMEap</string>
    <string name="status_prompt">Pilih Status</string>
    <string name="button_untuk_berkas_medis">SUBMIT</string>
    <string name="imageview">Upload Dokumen Pendukung</string>
    <string name="obat_obatan_yang_dikonsumsi">Obat-obatan yang Dikonsumsi</string>
    <string name="lokasi_periksa">Lokasi Checkup Terakhir</string>
    <string name="tanggal_periksa">Tanggal Periksa</string>
    <string name="catatan_diagnosis">Catatan Diagnosis</string>
    <string name="halaman_catatan_medis">Catatan Medis</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="birth_date">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Dont have an account? Register</string>
    <string name="already_registered">Already have an account? Login</string>


    <!-- Status Array untuk Spinner -->
    <string-array name="status_array">
        <item>Dalam Pengobatan</item>
        <item>Selesai Pengobatan</item>
        <item>Kondisi Stabil</item>
    </string-array>

    <string name="height_label">Tinggi</string>
    <string name="weight_label">Berat</string>
    <string name="calculate_button">Hitung</string>
    <string name="clear_button">Bersihkan</string>
    <string name="bmi_info">BMI kamu %1$s, kamu ini %2$s</string>
    <string name="heart_rate_button">Click for heart rate</string>
    <string name="hint_height">Cm</string>
    <string name="hint_weight">Kg</string>
    <string name="input_error">Silahkan isi tinggi dan berat badan anda</string>
    <string name="underweight">Kekurangan berat badan</string>
    <string name="normal">Normal</string>
    <string name="overweight">Kelebihan berat badan</string>
    <string name="obese">Obesitas</string>
</resources>