<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@drawable/bg2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Judul -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="1.0"
            android:fontFamily="@font/signika"
            android:text="@string/halaman_catatan_medis"
            android:textColorHint="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <!-- Tanggal Periksa -->
        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:alpha="1.0"
            android:background="@drawable/rounded_edittext"
            android:drawableEnd="@android:drawable/ic_menu_my_calendar"
            android:fontFamily="@font/signika"
            android:hint="@string/tanggal_periksa"
            android:padding="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <!-- Lokasi Check Up -->
        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:alpha="1.0"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/signika"
            android:hint="@string/lokasi_periksa"
            android:minHeight="64dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDate" />

        <!-- Tensi -->
        <EditText
            android:id="@+id/editTextTensi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:alpha="1.0"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/signika"
            android:hint="Tensi (mmHg)"
            android:minHeight="64dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextText5" />

        <!-- Nadi -->
        <EditText
            android:id="@+id/editTextNadi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:alpha="1.0"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/signika"
            android:hint="Nadi (bpm)"
            android:minHeight="64dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTensi" />

        <!-- Suhu -->
        <EditText
            android:id="@+id/editTextSuhu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:alpha="1.0"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/signika"
            android:hint="Suhu (°C)"
            android:minHeight="64dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNadi" />

        <!-- Berat Badan -->
        <EditText
            android:id="@+id/editTextBeratBadan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/signika"
            android:hint="Berat Badan (kg)"
            android:minHeight="64dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextSuhu" />

        <!-- Tinggi Badan -->
        <EditText
            android:id="@+id/editTextTinggiBadan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/signika"
            android:hint="Tinggi Badan (cm)"
            android:minHeight="64dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextBeratBadan" />

        <!-- Spinner Status -->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:minHeight="64dp"
            android:padding="12dp"
            android:background="@drawable/rounded_edittext"
            android:prompt="@string/status_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTinggiBadan" />

        <!-- Obat-obatan -->
        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/signika"
            android:hint="@string/obat_obatan_yang_dikonsumsi"
            android:minHeight="64dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner" />

        <!-- Catatan Diagnosis -->
        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/signika"
            android:hint="@string/catatan_diagnosis"
            android:minHeight="64dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextText6" />

        <!-- Upload Dokumen -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:contentDescription="@string/imageview"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextText2"
            app:srcCompat="@android:drawable/ic_menu_upload" />

        <!-- Button Submit -->
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button_untuk_berkas_medis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            android:backgroundTint="@color/aqua"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
